# non-parametric-uwb

./: .gitignore  README  collect_evaluations.sh  do_everything.sh  make_figures.py  meson.build
datasets/: dataset4.txt  dataset5.txt  dataset_to_binary.py
src/: meson.build
src/beacon_localize/: beacon_calibration.c  beacon_calibration.h  beacon_localize.c  meson.build  shared_structs.h
src/common/: getopt.h  math_util.h  meson.build  string_util.c  string_util.h  time_util.c  time_util.h  zarray.h  zhash.h
